--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,100 @@
-body {
-  background-color: rebeccapurple;
+html, :root, body {
+  width: 100%;
+  height: 100vh;
+  box-sizing: border-box;
+  background-color: whitesmoke;
+  margin: 0;
+  max-width: 100%;
+  overflow-x: hidden;
+  background-color: hsl(197, 71%, 73%);
+  overflow-y: scroll;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.search-bar {
+  grid-area: a;
+  display: flex;
+  justify-content: center;
+  height: fit-content;
+  padding-top: 35px;
+}
+
+.app-box {
+  height: 100%;
+  width: 100%;
+  display: grid;
+  grid-template:
+            "a" 150px
+            "b" 1fr / 1fr;
+  justify-items: center;
+  align-items: center;
+}
+
+.weather-display {
+  grid-area: b;
+  max-height: min(60vw, 60vh);
+  min-height: 660px;
+  height: calc(30vw + 30vh);
+  max-width: min(60vw, 60vh);
+  min-width: 660px;
+  width: calc(30vw + 30vh);
+  display: grid;
+  grid-template:
+  "a a b" 1fr
+  "a a c" 1fr
+  "d e f" 1fr / 1fr 1fr 1fr;
+  gap: 9px;
+}
+
+.weather-display>div {
+  border: 1px solid black;
+  width: 100%;
+  height: 100%;
+  background-color: hsl(0, 0%, 89%);
+}
+
+.weather-display>div>div:first-child {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.weather-display>div:first-child>div:first-child {
+  padding-top: 15px;
+  padding-bottom: 125px;
+}
+
+.weather-display>div>div {
+  text-align: center;
+}
+
+.weather-description {
+  padding-left: 12px;
+  padding-right: 12px;
+}
+
+.weather-box-1 {
+  grid-area: a;
+}
+
+.weather-box-2 {
+  grid-area: b;
+}
+
+.weather-box-3 {
+  grid-area: d;
+}
+
+.weather-box-4 {
+  grid-area: e;
+}
+
+.weather-box-5 {
+  grid-area: c;
+}
+
+.weather-box-6 {
+  grid-area: f;
 }
